# Missevan-FM-Recorder

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: rust.yml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  index.html  tauri.conf.json
src-tauri/config/: config.toml
src-tauri/config/anchors/: example.toml
src-tauri/src/: checker.rs  commands.rs  error.rs  lib.rs  main.rs  recorder.rs  spider.rs  state.rs  utils.rs
src-tauri/src/config/: manager.rs  mod.rs  model.rs
src/components/common/: NotificationBanner.vue
src/components/files/: FilesView.vue
src/components/live/: AnchorCard.vue  AnchorSettingsView.vue  LiveView.vue
src/components/player/: AudioPlayer.vue
src/components/settings/: SettingsView.vue
src/composables/: useNotification.ts  useResponsive.ts
src/locales/: en.ts  zh-CN.ts
src/stores/: anchorStore.ts  configStore.ts  notificationStore.ts
src/styles/: global.css  index.css  transitions.css  variables.css
src/types/: index.ts
