[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Mitsuki"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "missevan_recorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "missevan-recorder"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0", features = [] }   # Tauri 2.x
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"
regex = "1"
once_cell = "1"
sysinfo = "0.31"
which = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
toml = "0.8"
walkdir = "2"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
